# CustomPaddleOCR

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
custom_ocr/: __init__.py  ocr.py  results.py
custom_ocr/inference/: base_predictor.py  batch_sampler.py  funcs.py  image_reader.py  pre_processes.py  result.py  static_infer.py
custom_ocr/inference/image_classification/: predictor.py  processors.py
custom_ocr/inference/text_detection/: predictor.py  processors.py
custom_ocr/inference/text_recognition/: predictor.py  processors.py
custom_ocr/pipeline/: OCR.yaml  ocr.py
custom_ocr/pipeline/components/: cal_ocr_word_box.py  convert_points_and_boxes.py  crop_image_regions.py  sort_boxes.py  warp_image.py
custom_ocr/results/: base_results.py  fonts.py  img_class.py  ocr_results.py  text_det.py  text_rec.py
custom_ocr/utils/: convert.py  download.py  logger.py  misc.py  model_paths.py
