[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom_ocr"
version = "1.0"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime-gpu[cuda,cudnn]==1.23.2",
    "opencv-python==4.12.0.88",
    "pillow==12.0.0",
    "pyclipper==1.3.0.post6",
    "python-bidi==0.6.7",
    "PyYAML==6.0.3",
    "requests==2.32.5",
]
readme = "README.md"
description = "A program that uses paddleocr models with onnx for OCR inference."

[project.optional-dependencies]
full = [
    "setuptools==80.9.0",
    "paddlepaddle==3.1.1",
    "paddle2onnx==2.0.2rc3",
]